2008-03-13  Aaron Bockover  <abock@gnome.org>

	* NEWS: Updated for 0.98.1

	* configure.ac: Require Mono 1.2.2, oops

2008-03-13  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Libraries/Hyena/Hyena/DateTimeUtil.cs: Super ugly hack to work
	around ArguemtnOutOfRangeException thrown by DateTime parser.

2008-03-13  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Extensions/Banshee.Lastfm/Banshee.Lastfm.Radio/StationSource.cs: Add
	Banshee Group radio station as a default.

2008-03-13  Aaron Bockover  <abock@gnome.org>

	* src/Core/Banshee.Core/Banshee.Collection/TrackInfo.cs: Protect against
	NRE when comparing track objects

2008-03-13  James Willcox  <snorp@snorp.net>

	* src/Core/Banshee.ThickClient/Banshee.Gui.Widgets/TrackInfoDisplay.cs:
	Correctly update after cover art appears
	
2008-03-13  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Extensions/Banshee.Lastfm/Resources/audioscrobbler.png: Replace
	24x24 version with 22x22 version.

2008-03-13  Aaron Bockover  <abock@gnome.org>

	* src/Core/Banshee.ThickClient/Banshee.Gui/PlaybackRepeatActions.cs:
	Disable repeat modes in the UI since they are not actually implemented
	in the playback controller at this time

2008-03-13  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Extensions/Banshee.Lastfm/Banshee.Lastfm.Audioscrobbler/AudioscrobblerService.cs:
	Patch from Alexander Hixon fixing the Audioscrobbler now-playing delay
	issue, properly listens for the account being updated to update
	links/actions.

	* src/Core/Banshee.Core/Resources/contributors.xml: Add Michael Monreal to
	Artists.

2008-03-13  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.ThickClient/Banshee.Sources.Gui/SourceView.cs: Avoid
	GtkCritical warning by checking that the TreeIter is not Zero before
	setting a value on it.  Fixes bug with closing the Error Source.

2008-03-13  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Libraries/Hyena/Hyena.Data.Sqlite/DatabaseColumn.cs: